--- a/appview/pages/templates/fragments/editRepoDescription.html
+++ b/appview/pages/templates/fragments/editRepoDescription.html
@@ -2,10 +2,10 @@
 <form hx-put="/{{ .RepoInfo.FullName }}/description" hx-target="this" hx-swap="outerHTML" class="flex flex-wrap gap-2">
     <input type="text" class="p-1" name="description" value="{{ .RepoInfo.Description }}">
     <button type="submit" class="btn p-2 flex items-center gap-2 no-underline text-sm">
-      save {{ i "check" "w-3 h-3" }}
+      {{ i "check" "w-3 h-3" }} save 
     </button>
     <button type="button" class="btn p-2 flex items-center gap-2 no-underline text-sm" hx-get="/{{ .RepoInfo.FullName }}/description" >
-      cancel {{ i "x" "w-3 h-3" }}
+      {{ i "x" "w-3 h-3" }} cancel 
     </button>
 </form>
 {{ end }}
