--- a/appview/pages/templates/fragments/pullNewComment.html
+++ b/appview/pages/templates/fragments/pullNewComment.html
@@ -1,7 +1,7 @@
 {{ define "fragments/pullNewComment" }}
 <div 
   id="pull-comment-card-{{ .RoundNumber }}" 
-  class="bg-white rounded drop-shadow-sm py-4 px-6 relative w-full flex flex-col gap-2">
+  class="bg-white rounded drop-shadow-sm p-4 relative w-full flex flex-col gap-2">
   <div class="text-sm text-gray-500">
     {{ didOrHandle .LoggedInUser.Did .LoggedInUser.Handle }}
   </div>
