--- a/appview/pages/templates/fragments/pullResubmit.html
+++ b/appview/pages/templates/fragments/pullResubmit.html
@@ -24,7 +24,7 @@
             class="w-full p-2 mb-2 rounded border border-gray-200"
             placeholder="Paste your updated patch here."
             rows="15"
-            ></textarea>
+            >{{.Pull.LatestPatch}}</textarea>
           <button
               type="submit"
               class="btn flex items-center gap-2"
