--- a/appview/pages/templates/repo/pulls/patch.html
+++ b/appview/pages/templates/repo/pulls/patch.html
@@ -1,10 +1,8 @@
 {{ define "title" }}
-    {{ $oneIndexedRound := add .Round 1 }}
-    patch of {{ .Pull.Title }} &middot; round #{{ $oneIndexedRound }} &middot; pull #{{ .Pull.PullId }} &middot; {{ .RepoInfo.FullName }}
+    patch of {{ .Pull.Title }} &middot; round #{{ .Round }} &middot; pull #{{ .Pull.PullId }} &middot; {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "content" }}
-  {{ $oneIndexedRound := add .Round 1 }}
   {{ $stat := .Diff.Stat }}
     <div class="rounded drop-shadow-sm bg-white py-4 px-6">
       <header class="pb-2">
@@ -14,7 +12,11 @@
                 back
               </a>
               <span class="select-none before:content-['\00B7']"></span>
-              round #{{ $oneIndexedRound }}
+              round #{{ .Round }}
+              <span class="select-none before:content-['\00B7']"></span>
+              <a href="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/round/{{ .Round }}.patch">
+                  view raw
+              </a>
           </div>
           <div class="border-t border-gray-200 my-2"></div>
           <h1 class="text-2xl mt-3">
