--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -74,13 +74,12 @@
   {{ range $idx, $item := .Pull.Submissions }}
     {{ $diff := $item.AsNiceDiff $targetBranch }}
     {{ with $item }}
-    {{ $oneIndexedRound := add .RoundNumber 1 }}
     <details {{ if eq $idx $lastIdx }}open{{ end }}>
-        <summary id="round-#{{ $oneIndexedRound }}" class="list-none cursor-pointer">
+        <summary id="round-#{{ .RoundNumber }}" class="list-none cursor-pointer">
           <div class="flex flex-wrap gap-2 items-center">
             <!-- round number -->
             <div class="rounded bg-white drop-shadow-sm px-3 py-2">
-              #{{ $oneIndexedRound }}
+              #{{ .RoundNumber }}
             </div>
             <!-- round summary -->
             <div class="rounded drop-shadow-sm bg-white p-2 text-gray-500">
@@ -93,7 +92,7 @@
                 <span class="hidden md:inline">{{$re}}submitted</span>
                 by <a href="/{{ $owner }}">{{ $owner }}</a>
                 <span class="select-none before:content-['\00B7']"></span>
-                <a class="text-gray-500 hover:text-gray-500" href="#round-#{{ $oneIndexedRound }}"><time>{{ .Created | shortTimeFmt }}</time></a>
+                <a class="text-gray-500 hover:text-gray-500" href="#round-#{{ .RoundNumber }}"><time>{{ .Created | shortTimeFmt }}</time></a>
                 <span class="select-none before:content-['·']"></span>
                 {{ $s := "s" }}
                 {{ if eq (len .Comments) 1 }}
